# Natural-Language-Querying-

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
packageSQLRet/: app.py
