[tool.poetry]
name = "packagesqlret"
version = "1.0"
description = ""
authors = ["Janessa"]
license = "MIT License"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.19"
python-dotenv = "^1.0.1"
streamlit = "^1.22.0"
tiktoken = "^0.6.0"
faiss-cpu = "^1.8.0"
protobuf = "~3.19"
langchain-experimental = "^0.0.58"
mysql-connector-python = "^8.4.0"
pymysql = "^1.1.0"
sentence-transformers = "^2.7.0"
chromadb = "^0.5.0"
langchain-community = "^0.0.38"
langchain-google-genai = "^1.0.3"
google-generativeai = "^0.5.2"
install = "^1.3.5"
sqlparse = "^0.5.0"
pandas = "^2.2.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
google-cloud = "^0.34.0"
autocomplete = "^0.0.104"
streamlit-searchbox = "^0.1.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
